NotNeededQuestionMark/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: power-grid-monitor
  labels:
    app: power-grid-monitor
