NotNeededQuestionMark/k8s/kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: kafka-connect-pv-storage
          persistentVolumeClaim:
            claimName: kafka-connect-pvc
      containers:
        - name: kafka-connect
          image: registry.gitlab.sdu.dk/jah/bigdatarepo/kafka-connect:7.3.1
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: "/data/"
              name: kafka-connect-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
spec:
  type: NodePort
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: kafka-connect
