NotNeededQuestionMark/k8s/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  namespace: bd-bd-gr-08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: redpandadata/console:v2.7.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: bd-bd-gr-08
spec:
  selector:
    app: redpanda
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
